adding files to first train

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
+apex
 imageio
-hydra-core
 matplotlib
-numpy>=1.19.5
-opencv-python>=4.1.0.25
-pandas>=1.2.0
+numpy
 Pillow
+opencv-python>=4.1.0.25
 PyYAML
-scipy>=1.2.1
-sklearn
-torch
+recordclass
+scipy
 tqdm
-typing_extensions
+torch
+yacs
